depoleyment-service updated

--- a/deployment-service.yml
+++ b/deployment-service.yml
@@ -13,16 +13,14 @@ spec:
     spec:
       containers:
         - name: devops-jenkins-app
-          image: ferhataydin/devops-jenkins-app
+          image: ferhataydin/devops-jenkins-app:latest
           resources:
             limits:
               memory: "128Mi"
               cpu: "500m"
           ports:
             - containerPort: 8080
-
-
-
+---
 apiVersion: v1
 kind: Service
 metadata:
@@ -31,6 +29,6 @@ spec:
   selector:
     app: devops-jenkins-app
   ports:
-    - port: <Port>
+    - port: 8080
       targetPort: 8080
-
+  type: NodePort
